## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = pokemoncrush

pokemoncrush_SOURCES = \
	main.cc \
	caja.cc \
	caja.h \
	coordenada.cc \
	coordenada.h \
	tablero.cc \
	tablero.h

pokemoncrush_LDFLAGS = 

pokemoncrush_LDADD = 

